--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,9 +5,34 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+
+  {#    	<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" type="text/css"  />
+
+
+        <link rel="stylesheet" href="{{ asset('css/bootstrap-grid.css') }}" type="text/css"  />
+        <link rel="stylesheet" href="{{ asset('css/bootstrap-reboot.css') }}" type="text/css"  />
+
+        <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" type="text/css"  />
+        <link rel="stylesheet" href="{{ asset('css/bootstrap-grid.min.css') }}" type="text/css"  />
+
+        <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.css') }}" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" type="text/css"  />
+#}
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+{#
+	<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" type="text/css"  />
+  <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.css') }}" type="text/css"  />
+#}
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+        <script src="{{ asset('./js/bootstrap.min.js') }}" type="text/javascript" ></script>
+
+
+
+        {% endblock %}
     </body>
 </html>
