--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,13 +8,10 @@
 
   {#    	<link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}" type="text/css"  />
 
-
         <link rel="stylesheet" href="{{ asset('css/bootstrap-grid.css') }}" type="text/css"  />
         <link rel="stylesheet" href="{{ asset('css/bootstrap-reboot.css') }}" type="text/css"  />
-
         <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" type="text/css"  />
         <link rel="stylesheet" href="{{ asset('css/bootstrap-grid.min.css') }}" type="text/css"  />
-
         <link rel="stylesheet" href="{{ asset('css/bootstrap-theme.css') }}" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" type="text/css"  />
 #}
 
@@ -29,9 +26,12 @@
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
-        <script src="{{ asset('./js/bootstrap.min.js') }}" type="text/javascript" ></script>
 
+        {#<script src="{{ asset('./js/bootstrap.min.js') }}" type="text/javascript" ></script>
+          #}
 
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
         {% endblock %}
     </body>
