--- a/app/Resources/views/landing/index.html.twig
+++ b/app/Resources/views/landing/index.html.twig
@@ -7,7 +7,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="pull-right">Bonjour, {{user_name}}
     <li>
-      <a href="./logout"> se déconecter
+      <a href="./logout"> Se déconnecter
       <span class="glyphicon glyphicon-log-out"></span>
     </a>
     </li>
@@ -17,12 +17,12 @@
 <button type="button" class="btn btn-secondary btn-lg btn-block">Vos raids en tant qu'organisateur {{user_name}}</button>
 <br/>
 
-{% for valeur in raids_organisateurs %}
- {{valeur.nom}} <br/>
+{% for raid in raids_organisateurs %}
+ {{raid.nom}} <br/>
 {% endfor %}
 
 <button type="button" class="btn btn-default btn-sm">
-  <a href="./raid/new">
+  <a href="raids/create">
     <span class="glyphicon glyphicon-plus"></span> Plus
   </a>
 </button>
@@ -32,15 +32,15 @@
 <button type="button" class="btn btn-secondary btn-lg btn-block">Vos raids en tant que bénévoles {{user_name}}</button>
 <br/>
 
-{% for valeur in raids_benevoles %}
- {{valeur.nom}} <br/>
+{% for raid in raids_benevoles %}
+ {{raid.nom}} <br/>
 {% endfor %}
 
 <button type="button" class="btn btn-primary btn-lg btn-block">Tous les raids</button>
 <br/>
-{% for valeur in all_raids %}
- {{valeur.nom}}
-  <a href="./raid/{{valeur.id}}/edit">
+{% for raid in all_raids %}
+  {{raid.nom}}
+  <a href="./raid/{{raid.id}}/edit">
     <span class="glyphicon glyphicon-plus"></span> Rejoins-nous!
   </a>
   <br/>
