--- a/app/Resources/views/raid/new.html.twig
+++ b/app/Resources/views/raid/new.html.twig
@@ -9,33 +9,33 @@
         <div class="panel panel-default">
           <div class="panel-heading">Création de Raid</div>
           <div class="panel-body">
-            {{ form_start(form) }}
+            {{ form_start(raid) }}
             <div class="form_group">
                 <div class="col-md-8 col-md-offset-2">
-                  {{ form_row(form.nom, {'attr': {'class': 'form-control'}}) }}
+                  {{ form_row(raid.nom, {'attr': {'class': 'form-control'}}) }}
                 </div>
             </div>
 
             <div class="form_group">
                 <div class="col-md-8 col-md-offset-2">
-                  {{ form_row(form.lieu, {'attr': {'class': 'form-control'}}) }}
+                  {{ form_row(raid.lieu, {'attr': {'class': 'form-control'}}) }}
                 </div>
             </div>
 
             <div class="form_group">
                 <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.dateRaid, {'attr': {'class': 'form-control'}}) }}
+                {{ form_row(raid.date, {'attr': {'class': 'form-control'}}) }}
                 </div>
             </div>
 
 
             <div class="form_group">
                 <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.edition, {'attr': {'class': 'form-control'}}) }}
+                {{ form_row(raid.edition, {'attr': {'class': 'form-control'}}) }}
                 </div>
             </div>
 
-            <div class="form_group">
+            {# <div class="form_group">
                 <div class="col-md-8 col-md-offset-2">
                 {{ form_row(form.nbrSport, {'attr': {'class': 'form-control'}}) }}
                 </div>
@@ -45,22 +45,19 @@
                 <div class="col-md-8 col-md-offset-2">
                 {{ form_row(form.typeSport, {'attr': {'class': 'form-control'}}) }}
                 </div>
-            </div>
+            </div> 
 
             <div class="form_group">
                 <div class="col-md-8 col-md-offset-2">
                 {{ form_row(form.typeSurface, {'attr': {'class': 'form-control'}}) }}
                 </div>
-            </div>
+            </div> #}
 
             <div class="form_group">
                 <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.equipe, {'attr': {'class': 'form-control'}}) }}
+                {{ form_row(raid.equipe, {'attr': {'class': 'form-control'}}) }}
                 </div>
             </div>
-
-
-
 
             <div class="form-group">
                 <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
@@ -76,7 +73,7 @@
 
 
             </div>
-            {{ form_end(form) }}
+            {{ form_end(raid) }}
           </div>
         </div>
     </div>
