--- a/app/Resources/views/auth/register.html.twig
+++ b/app/Resources/views/auth/register.html.twig
@@ -1,50 +1,58 @@
-{% extends 'base.html.twig' %}
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <title>Collapsible sidebar using Bootstrap 4</title>
 
-{% block body %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <div class="panel panel-default">
-          <div class="panel-heading">Register</div>
-          <div class="panel-body">
-            {{ form_start(form) }}
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                  {{ form_row(form.name, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+    <!-- Bootstrap CSS CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+    <!-- Font Awesome JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+</head>
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+{% block content %}
+<!-- Default form register -->
+<form class="text-center border border-light p-5">
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
-              </div>
-            </div>
+    <p class="h4 mb-4">Créer un compte</p>
 
-            <div class="form-group">
-                <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
-                    <button type="submit" class="btn btn-primary">
-                        <i class="fa fa-btn fa-user"></i> Register
-                    </button>
-                </div>
-            </div>
-            {{ form_end(form) }}
-          </div>
+    <div class="form-row mb-4">
+        <div class="col">
+            <!-- First name -->
+            <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="Prénom">
+        </div>
+        <div class="col">
+            <!-- Last name -->
+            <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Nom">
         </div>
     </div>
-  </div>
-</div>
+
+    <!-- E-mail -->
+    <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail">
+
+    <!-- Password -->
+    <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Mot de passe" aria-describedby="defaultRegisterFormPasswordHelpBlock">
+    <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
+        At least 8 characters and 1 digit
+    </small>
+
+    <!-- Sign up button -->
+    <button class="btn btn-info my-4 btn-block" type="submit">Créer un compte</button>
+
+    <hr>
+
+    <!-- Terms of service -->
+    <p>En cliquant sur 
+        <em>Créer un compte,</em> vous acceptez les
+        <a href="" target="_blank">Conditions d'utilisation</a> et la
+        <a href="" target="_blank">Politique de confidentialité</a>. </p>
+
+</form>
 {% endblock %}
+<html>
