--- a/app/Resources/views/raid/new.html.twig
+++ b/app/Resources/views/raid/new.html.twig
@@ -1,8 +1,6 @@
 {% extends 'base.html.twig' %}
 
-
-
-{% block body %}
+{% block content %}
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
@@ -69,9 +67,6 @@
                     <a href="{{ path('landing') }}">Retour à la liste</a>
                     </button>
                 </div>
-
-
-
             </div>
             {{ form_end(raid) }}
           </div>
