--- a/app/Resources/views/auth/register.html.twig
+++ b/app/Resources/views/auth/register.html.twig
@@ -17,42 +17,46 @@
 </head>
 
 {% block content %}
-<!-- Default form register -->
-<form class="text-center border border-light p-5">
+    <div class="col-md-6 mb-4">
+        <div class="card primary-color-dark">
+            <form class="text-center border border-light p-5" action="{{ path('register') }}">
+                <p class="h4 mb-4">Créer un compte</p>
 
-    <p class="h4 mb-4">Créer un compte</p>
+                <div class="form-row mb-4">
+                    <div class="col">         
+                        <!-- Last name -->
+                        <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Nom">
+                    </div>
+                </div>
 
-    <div class="form-row mb-4">
-        <div class="col">
-            <!-- First name -->
-            <input type="text" id="defaultRegisterFormFirstName" class="form-control" placeholder="Prénom">
-        </div>
-        <div class="col">
-            <!-- Last name -->
-            <input type="text" id="defaultRegisterFormLastName" class="form-control" placeholder="Nom">
+                <!-- E-mail -->
+                <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail">
+
+                <!-- Password -->
+                <div class="form-row mb-4">
+                    <div class="col">
+                        <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Mot de passe" aria-describedby="defaultRegisterFormPasswordHelpBlock">
+                    </div>
+                    <div class="col">
+                        <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Validation mot de passe" aria-describedby="defaultRegisterFormPasswordHelpBlock">
+                    </div>
+                </div>
+                <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
+                    Au moins 8 charactères et 1 chiffre
+                </small>
+                
+                <!-- Sign up button -->
+                <button class="btn btn-info my-4 btn-block" type="submit">Créer un compte</button>
+
+                <hr>
+
+                <!-- Terms of service -->
+                <p>En cliquant sur 
+                    <em>Créer un compte,</em> vous acceptez les
+                    <a href="" target="_blank">Conditions d'utilisation</a> et la
+                    <a href="" target="_blank">Politique de confidentialité</a>. </p>
+            </form>
         </div>
     </div>
-
-    <!-- E-mail -->
-    <input type="email" id="defaultRegisterFormEmail" class="form-control mb-4" placeholder="E-mail">
-
-    <!-- Password -->
-    <input type="password" id="defaultRegisterFormPassword" class="form-control" placeholder="Mot de passe" aria-describedby="defaultRegisterFormPasswordHelpBlock">
-    <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
-        At least 8 characters and 1 digit
-    </small>
-
-    <!-- Sign up button -->
-    <button class="btn btn-info my-4 btn-block" type="submit">Créer un compte</button>
-
-    <hr>
-
-    <!-- Terms of service -->
-    <p>En cliquant sur 
-        <em>Créer un compte,</em> vous acceptez les
-        <a href="" target="_blank">Conditions d'utilisation</a> et la
-        <a href="" target="_blank">Politique de confidentialité</a>. </p>
-
-</form>
 {% endblock %}
 <html>
