--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -85,7 +85,8 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Déconnexion</a>
+                                    Vous êtes connecté !
+                                    <a class="nav-link" href="logout">Déconnexion</a>                                
                             </li>
                         </ul>
                     </div>
