--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -85,7 +85,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item active">
-                                    Vous êtes connecté !
+                                    Bonjour {{user_name}} !
                                     <a class="nav-link" href="logout">Déconnexion</a>                                
                             </li>
                         </ul>
