--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -83,8 +83,8 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item active">
-                                Bonjour {{user_name}} !
-                                <a href="logout"> 
+                                Bonjour {{user.name}} !
+                                <a href= {{ path('logout') }}> 
                                     <i class="fas fa-sign-out-alt"></i>
                                 </a>                            
                             </li>
