--- a/app/Resources/views/auth/old2.login.html.twig
+++ b/app/Resources/views/auth/old2.login.html.twig
@@ -23,13 +23,18 @@
     <div class="col-md-6 mb-4">
         <div class="card default-color-dark">
             <form class="text-center border border-light p-5" role="form" method="POST" action="{{ path('security_login_check') }}">
+                {% if error %}
+                    <div class="alert alert-danger">
+                        {{ error.messageKey|trans(error.messageData) }}
+                    </div>
+                {% endif %}
                 <p class="h4 mb-4">Connexion</p>
 
                 <!-- Email -->
-                <input type="email" id="email" class="form-control mb-4" placeholder="E-mail" name="_email" value="{{ last_username }}">
+                <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail" name="_email" value="{{ last_username }}">
 
                 <!-- Password -->
-                <input type="password" id="password" class="form-control mb-4" placeholder="Mot de passe" name="_password">
+                <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Mot de passe" name="_password">
 
                 <div class="d-flex justify-content-around">
                     <div>
@@ -47,14 +52,51 @@
 
                 <!-- Sign in button -->
                 <button class="btn btn-info btn-block my-4" type="submit">Connexion</button>
-
-                 <!-- Register -->
-                    <p>Pas encore inscrit?
-                        <a href="register">Rejoignez-nous</a>
-                    </p>
             </form>
         </div>
     </div>
+
+{% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <div class="panel panel-default">
+          <div class="panel-heading">Register</div>
+          <div class="panel-body">
+            {{ form_start(form) }}
+            <div class="form_group">
+                <div class="col-md-8 col-md-offset-2">
+                  {{ form_row(form.name, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            </div>
+             <div class="form_group">
+                <div class="col-md-8 col-md-offset-2">
+                {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
+                </div>
+            </div>
+             <div class="form_group">
+                <div class="col-md-8 col-md-offset-2">
+                {{ form_row(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                 </div>
+       <div class="form_group">
+          <div class="col-md-8 col-md-offset-2">
+          {{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
+        </div>
+      </div>
+       <div class="form-group">
+          <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
+              <button type="submit" class="btn btn-primary">
+                  <i class="fa fa-btn fa-user"></i> Register
+              </button>
+          </div>
+      </div>
+      {{ form_end(form) }}
+    </div>
+  </div>
 </div>
+</div>
+</div>
+{% endblock %}
 
 </body>
