Correction Login + Register / Modification CSS

--- a/app/Resources/views/auth/login.html.twig
+++ b/app/Resources/views/auth/login.html.twig
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Collapsible sidebar using Bootstrap 4</title>
+    <title>Raid Tracker</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -19,9 +19,9 @@
 
 <body>
 
-<div class="row">
-    <div class="col-md-6 mb-4">
-        <div class="card default-color-dark">
+<div class='vertical-center'>
+<div class='container'>
+        <div class="card default-color-dark ">
             <form class="text-center border border-light p-5" role="form" method="POST" action="{{ path('security_login_check') }}">
                 <p class="h4 mb-4">Connexion</p>
 
@@ -54,7 +54,6 @@
                     </p>
             </form>
         </div>
-    </div>
 </div>
-
+</div>
 </body>
