--- a/app/Resources/views/auth/register.html.twig
+++ b/app/Resources/views/auth/register.html.twig
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Collapsible sidebar using Bootstrap 4</title>
+    <title>Raid Tracer</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -18,43 +18,51 @@
 </head>
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <div class="panel panel-default">
-          <div class="panel-heading">Register</div>
-          <div class="panel-body">
-            {{ form_start(form) }}
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                  {{ form_row(form.name, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
-             <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
-             <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
-                </div>
-                 </div>
-       <div class="form_group">
-          <div class="col-md-8 col-md-offset-2">
-          {{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
+<div class='vertical-center'>
+<div class='container'>
+<div class="card default-color-dark">
+{{ form_start(form, {'attr': {'class': 'center text-center border border-light p-5'}}) }}
+    <p class="h4 mb-4">Créer un compte</p>
+    <div class="form-row mb-4">
+        <div class="col">
+            <!-- First name -->
+            {{ form_row(form.name, {'attr': {'class': 'form-control'}}) }}
         </div>
-      </div>
-       <div class="form-group">
-          <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
-              <button type="submit" class="btn btn-primary">
-                  <i class="fa fa-btn fa-user"></i> Register
-              </button>
-          </div>
-      </div>
-      {{ form_end(form) }}
     </div>
-  </div>
+
+    <div class="form-row mb-4">
+        <div class="col">
+            <!-- E-mail -->
+            {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
+        </div>
+    </div>
+
+    <div class="form-row mb-4">
+        <div class="col">
+            <!-- Password -->
+            {{ form_row(form.plainPassword.first, {'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="col">
+            <!-- Password -->
+            {{ form_row(form.plainPassword.second, {'attr': {'class': 'form-control'}}) }}
+        </div>
+    </div>
+
+    <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
+        Au moins 8 charactères dont 1 chiffre
+    </small>
+
+    <!-- Sign up button -->
+    <button class="btn btn-info my-4 btn-block" type="submit">Créer un compte</button>
+
+    <hr>
+
+    <!-- Terms of service -->
+    <p>En cliquant sur
+        <em>Créer un compte</em> vous acceptez les
+        <a href="" target="_blank">Conditions d'utilisation</a> et la
+        <a href="" target="_blank">Politique de confidentialité</a>. </p>
+{{ form_end(form) }}
 </div>
 </div>
 </div>
