--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Raid Tracker{% endblock %}</title>
         {% block stylesheets %}
             <link href="{{ asset('css/styles.css') }}" type="text/css" rel="stylesheet" />
         {% endblock %}
