--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
- {% block body %}
+ {% block content %}
     <div id="wrapper">
         <div id="container">
             <div id="welcome">
