--- a/app/Resources/views/default/map_interactive.html.twig
+++ b/app/Resources/views/default/map_interactive.html.twig
@@ -1,21 +1,13 @@
 
-<!DOCTYPE HTML>
-<html>
+{% extends 'base.html.twig' %}
+
+{% block content %}
   <head>
     <title>Carte Interactive</title>
     <style type="text/css">
-      html {
-          width: 100%;
-          height: 100%;
-      }
-      body {
-        width: 95%;
-        height: 95%;
-        margin: auto;
-      }
       #basicMap {
         width: 100%;
-        height: 100%;
+        height: 91.5%;
       }
     </style>
     <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
@@ -75,4 +67,5 @@
   <body onload="init();">
     <div id="basicMap"></div>
   </body>
-</html>
+
+{% endblock %}
