fix: parcours extends

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -30,10 +30,10 @@
 
             <ul class="list-unstyled components">
                 <li class="active">
-                    <a href="landing">Accueil</a>
+                    <a href={{ path('landing') }}>Accueil</a>
                 <li>
                 <li>
-                    <a href="carte">Carte interactive</a>
+                    <a href={{ path('carte') }}>Carte interactive</a>
                 </li>
                 <li class="active">
                     <a href="#" aria-disabled="true">Invitation Raid</a>
