--- a/app/Resources/views/parcours/new.html.twig
+++ b/app/Resources/views/parcours/new.html.twig
@@ -1,46 +1,46 @@
-{% include '::base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block content %}
 <div class="container">
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <div class="panel panel-default">
-          <div class="panel-heading">Création d'un parcours</div>
-          <div class="panel-body">
-            {{ form_start(form) }}
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                  {{ form_row(form.nom, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div class="panel panel-default">
+                <div class="panel-heading">Création d'un parcours</div>
+                    <div class="panel-body">
+                        {{ form_start(form) }}
+                        <div class="form_group">
+                            <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(form.nom, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.type, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+                        <div class="form_group">
+                            <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(form.type, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.etat, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+                        <div class="form_group">
+                            <div class="col-md-8 col-md-offset-2">
+                            {{ form_row(form.etat, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
 
-            <div class="form-group">
-                <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
-                    <button type="submit" class="btn btn-primary">
-                        <i class="fa fa-btn fa-user"></i> Création
-                    </button>
+                        <div class="form-group">
+                            <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="fa fa-btn fa-user"></i>Création
+                                </button>
 
-                    <button type="button" class="btn btn-outline-success and-all-other-classes">
-                    <a href="{{ path('landing') }}">Retour à la liste</a>
-                    </button>
-                </div>
+                                <button type="button" class="btn btn-outline-success and-all-other-classes">
+                                    <a href={{ path('landing') }}>Retour à la liste</a>
+                                </button>
+                            </div>
+                        </div>
+                        {{ form_end(form) }}
+                    </div>
             </div>
-            {{ form_end(form) }}
-          </div>
         </div>
     </div>
-  </div>
 </div>
 {% endblock %}
