--- a/app/Resources/views/parcours/new.html.twig
+++ b/app/Resources/views/parcours/new.html.twig
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div class='vertical-center'>
-    <div class="container">
+    <div class="container col col-md-4">
         <div class="card default-color-dark ">
-            {{ form_start(form, {'attr': {'class': 'center text-center border border-light p-5'}}) }}
-                <p class="h4 mb-4">Création d'un parcours</p>
+            {{ form_start(form, {'attr': {'class': 'center border border-light p-5 '}}) }}
+                <p class="h4 mb-2 text-center">Création d'un parcours</p>
                 
                 <div class="form-row mb-4">
                     <div class="col">
