--- a/app/Resources/views/raid/new.html.twig
+++ b/app/Resources/views/raid/new.html.twig
@@ -1,77 +1,71 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        <div class="panel panel-default">
-          <div class="panel-heading">Création de Raid</div>
-          <div class="panel-body">
-            {{ form_start(raid) }}
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                  {{ form_row(raid.nom, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+<div class='vertical-center'>
+    <div class="container col col-md-4">
+            <div class="card default-color-dark ">
+                {{ form_start(raid, {'attr': {'class': 'center border border-light p-5'}}) }}
+                    <p class="h4 mb-4 text-center">Création de Raid</p>
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                  {{ form_row(raid.lieu, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(raid.nom, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(raid.date, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(raid.lieu, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
+
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(raid.date, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
 
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(raid.edition, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(raid.edition, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
 
-            {# <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.nbrSport, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+                   {# <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(raid.nbrSport, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.typeSport, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div> 
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(raid.typeSport, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div> 
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(form.typeSurface, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div> #}
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(raid.typeSurface, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div> #}
 
-            <div class="form_group">
-                <div class="col-md-8 col-md-offset-2">
-                {{ form_row(raid.equipe, {'attr': {'class': 'form-control'}}) }}
-                </div>
-            </div>
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            {{ form_row(raid.equipe, {'attr': {'class': 'form-control'}}) }}
+                        </div>
+                    </div>
 
-            <div class="form-group">
-                <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
-                    <button type="submit" class="btn btn-primary">
-                        <i class="fa fa-btn fa-user"></i> Création
-                    </button>
-
-                    <button type="button" class="btn btn-outline-success and-all-other-classes">
-                    <a href="{{ path('landing') }}">Retour à la liste</a>
-                    </button>
-                </div>
-            </div>
-            {{ form_end(raid) }}
+                    <div class="form-row mb-4">
+                        <div class="col">
+                            <button class="btn btn-info my-4 btn-block" type="submit">Créer un raid</button>
+                        </div>
+                        <div class="col">
+                            <button class="btn btn-info my-4 btn-block" type="submit">Annuler</button>
+                        </div>
+                    </div>
+                {{ form_end(raid) }}
           </div>
-        </div>
     </div>
-  </div>
 </div>
 {% endblock %}
