fix: cancel form

--- a/app/Resources/views/raid/new.html.twig
+++ b/app/Resources/views/raid/new.html.twig
@@ -61,7 +61,7 @@
                             <button class="btn btn-info my-4 btn-block" type="submit">Créer un raid</button>
                         </div>
                         <div class="col">
-                            <button class="btn btn-info my-4 btn-block" type="submit">Annuler</button>
+                            <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
                         </div>
                     </div>
                 {{ form_end(raid) }}
