--- a/app/Resources/views/parcours/new.html.twig
+++ b/app/Resources/views/parcours/new.html.twig
@@ -30,7 +30,7 @@
                         <button class="btn btn-info my-4 btn-block" type="submit">Créer un compte</button>
                     </div>
                     <div class="col">
-                        <button class="btn btn-info my-4 btn-block" type="submit">Annuler</button>
+                        <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
                     </div>
                 </div>
             {{ form_end(form) }}
