--- a/app/Resources/views/auth/register.html.twig
+++ b/app/Resources/views/auth/register.html.twig
@@ -61,7 +61,8 @@
     <p class="text-center">En cliquant sur
         <em>Créer un compte</em> vous acceptez les
         <a href="" target="_blank">Conditions d'utilisation</a> et la
-        <a href="" target="_blank">Politique de confidentialité</a>. </p>
+        <a href="" target="_blank">Politique de confidentialité</a>. 
+    </p>
 {{ form_end(form) }}
 </div>
 </div>
