--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -74,7 +74,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item active">
-                                Bonjour {{user.name}} !
+                                Bonjour {{user.username}} !
                                 <a href= {{ path('logout') }}>
                                     <i class="fas fa-sign-out-alt"></i>
                                 </a>
