fix: access_control to pages

--- a/app/Resources/views/auth/register.html.twig
+++ b/app/Resources/views/auth/register.html.twig
@@ -26,7 +26,7 @@
     <div class="form-row mb-4">
         <div class="col">
             <!-- First name -->
-            {{ form_row(form.name, {'attr': {'class': 'form-control'}}) }}
+            {{ form_row(form.username, {'attr': {'class': 'form-control'}}) }}
         </div>
     </div>
 
