--- a/app/Resources/views/raid/description_raid_organisateur.html.twig
+++ b/app/Resources/views/raid/description_raid_organisateur.html.twig
@@ -6,11 +6,15 @@
         <button type="button" class="btn btn-primary btn-lg btn-block">Parcours</button>
 
         <ul class="list-group">
-        {% for parcours in all_parcours %}
-            <li class="list-group-item text-left">
-                {{parcours.nom}}
-            </li>
-        {% endfor %}
+        {% if all_parcours != null %}
+            {% for parcours in all_parcours %}
+                <li class="list-group-item text-left">
+                    {{parcours.nom}}
+                </li>
+            {% endfor %}
+        {% else %}
+            <p>Aucun parcours n'a pour l'instant été créé pour ce RAID</p>
+        {% endif %}
         </ul>
 
         <a href= {{ path('create_parcours',{'id':raid.id}) }}>
