--- a/app/Resources/views/parcours/new.html.twig
+++ b/app/Resources/views/parcours/new.html.twig
@@ -21,13 +21,7 @@
 
                 <div class="form-row mb-4">
                     <div class="col">
-                        {{ form_row(form.etat, {'attr': {'class': 'form-control'}}) }}
-                    </div>
-                </div>
-
-                <div class="form-row mb-4">
-                    <div class="col">
-                        <button class="btn btn-info my-4 btn-block" type="submit">Créer un compte</button>
+                        <button class="btn btn-info my-4 btn-block" type="submit">Valider la création</button>
                     </div>
                     <div class="col">
                         <button class="btn btn-info my-4 btn-block" type="reset">Réinitialiser</button>
